fix spacing

--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -6640,9 +6640,10 @@ span.select2-dropdown.select2-dropdown--below {
 
 .tour-details {
     color: #343a40;
-    padding: 1.5rem 0 1rem;
-    border-bottom: 1px solid #e9e9e9;
-    margin-bottom: 0.5rem;
+    padding: 2.25rem 0 1rem 1.75rem;
+    border: 1px solid #e9e9e9;
+    border-inline: none;
+    margin: 2rem 0 0.5rem;
 }
 .tour-details__items {
     margin: 0.25rem 0 0.75rem 1rem;
